--- a/labeled_to_csv.ipynb
+++ b/labeled_to_csv.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/chaewon/Desktop/snukdt/시각화웹개발/project/labeled_img/labels.csv'"
+       "'/Users/chaewon/Desktop/snukdt/시각화웹개발/project/Visualization/missing/labels_cw.csv'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,13 +49,13 @@
     "    return xml_df\n",
     "\n",
     "# XML 파일이 저장된 폴더 경로\n",
-    "xml_folder_path = '/Users/chaewon/Desktop/snukdt/시각화웹개발/project/labeled_img'\n",
+    "xml_folder_path = '/Users/chaewon/Desktop/snukdt/시각화웹개발/project/Visualization/missing/missing_xml'\n",
     "\n",
     "# XML 데이터를 CSV로 변환\n",
     "df = xml_to_csv(xml_folder_path)\n",
     "\n",
     "# CSV 파일로 저장\n",
-    "csv_output_path = '/Users/chaewon/Desktop/snukdt/시각화웹개발/project/labeled_img/labels.csv'\n",
+    "csv_output_path = '/Users/chaewon/Desktop/snukdt/시각화웹개발/project/Visualization/missing/labels_cw.csv'\n",
     "df.to_csv(csv_output_path, index=False)\n",
     "\n",
     "csv_output_path\n"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,58 +100,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>IMG_2549.jpg</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>862</td>\n",
-       "      <td>이한상</td>\n",
-       "      <td>336</td>\n",
-       "      <td>174</td>\n",
-       "      <td>377</td>\n",
-       "      <td>274</td>\n",
+       "      <td>IMG_2824.JPG</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>2268</td>\n",
+       "      <td>박지영</td>\n",
+       "      <td>797</td>\n",
+       "      <td>1244</td>\n",
+       "      <td>871</td>\n",
+       "      <td>1338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>IMG_2549.jpg</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>862</td>\n",
-       "      <td>이지환</td>\n",
-       "      <td>448</td>\n",
-       "      <td>145</td>\n",
-       "      <td>542</td>\n",
-       "      <td>239</td>\n",
+       "      <td>IMG_2824.JPG</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>2268</td>\n",
+       "      <td>전효진</td>\n",
+       "      <td>1382</td>\n",
+       "      <td>1296</td>\n",
+       "      <td>1426</td>\n",
+       "      <td>1354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>IMG_2549.jpg</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>862</td>\n",
-       "      <td>배종성</td>\n",
-       "      <td>653</td>\n",
-       "      <td>263</td>\n",
-       "      <td>736</td>\n",
-       "      <td>345</td>\n",
+       "      <td>IMG_2824.JPG</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>2268</td>\n",
+       "      <td>최지혜</td>\n",
+       "      <td>924</td>\n",
+       "      <td>1283</td>\n",
+       "      <td>971</td>\n",
+       "      <td>1344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>IMG_2549.jpg</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>862</td>\n",
-       "      <td>양지수</td>\n",
-       "      <td>153</td>\n",
-       "      <td>215</td>\n",
-       "      <td>224</td>\n",
-       "      <td>333</td>\n",
+       "      <td>IMG_2824.JPG</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>2268</td>\n",
+       "      <td>배종성</td>\n",
+       "      <td>950</td>\n",
+       "      <td>1507</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>1578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>IMG_2549.jpg</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>862</td>\n",
-       "      <td>임종욱</td>\n",
-       "      <td>18</td>\n",
-       "      <td>239</td>\n",
-       "      <td>136</td>\n",
-       "      <td>404</td>\n",
+       "      <td>IMG_2824.JPG</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>2268</td>\n",
+       "      <td>유지훈</td>\n",
+       "      <td>1121</td>\n",
+       "      <td>1538</td>\n",
+       "      <td>1192</td>\n",
+       "      <td>1633</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,20 +159,57 @@
       ],
       "text/plain": [
        "       filename  width  height class  xmin  ymin  xmax  ymax\n",
-       "0  IMG_2549.jpg   1179     862   이한상   336   174   377   274\n",
-       "1  IMG_2549.jpg   1179     862   이지환   448   145   542   239\n",
-       "2  IMG_2549.jpg   1179     862   배종성   653   263   736   345\n",
-       "3  IMG_2549.jpg   1179     862   양지수   153   215   224   333\n",
-       "4  IMG_2549.jpg   1179     862   임종욱    18   239   136   404"
+       "0  IMG_2824.JPG   4032    2268   박지영   797  1244   871  1338\n",
+       "1  IMG_2824.JPG   4032    2268   전효진  1382  1296  1426  1354\n",
+       "2  IMG_2824.JPG   4032    2268   최지혜   924  1283   971  1344\n",
+       "3  IMG_2824.JPG   4032    2268   배종성   950  1507  1013  1578\n",
+       "4  IMG_2824.JPG   4032    2268   유지훈  1121  1538  1192  1633"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['IMG_2824.JPG', 'KakaoTalk_20240814_170634755 복사본 2.jpg',\n",
+       "       'KakaoTalk_20240814_170634755 복사본 3.jpg', 'IMG_2819.JPG',\n",
+       "       '체육대회_박준희이재욱교수님_0812.jpg',\n",
+       "       '체육대회_유지훈_류근관교수님_0812_22.jpg',\n",
+       "       'KakaoTalk_20240814_170634755 복사본.jpg', 'IMG_2836.JPG',\n",
+       "       '쳬육대회_ox퀴즈_0812_19.jpg', 'KakaoTalk_20240814_170634755.jpg',\n",
+       "       'IMG_2844.JPG', '테니스_0813_06.jpg',\n",
+       "       'KakaoTalk_20240814_170634755_02.jpg',\n",
+       "       'KakaoTalk_20240814_170634755_02 복사본.jpg',\n",
+       "       'KakaoTalk_Photo_2024-08-20-12-23-54 007.jpeg',\n",
+       "       'KakaoTalk_Photo_2024-08-20-12-23-54 004.jpeg',\n",
+       "       'KakaoTalk_Photo_2024-08-20-12-23-54 005.jpeg',\n",
+       "       'KakaoTalk_Photo_2024-08-20-12-23-54 001.jpeg',\n",
+       "       '체육대회_유지훈정한직_0812_22.jpg',\n",
+       "       '체육대회_장은지김명환교수님_0812.jpg',\n",
+       "       'KakaoTalk_Photo_2024-08-20-12-23-54 002.jpeg',\n",
+       "       'KakaoTalk_20240814_170634755_02 복사본 2.jpg',\n",
+       "       '체육대회끝나고__0812_22.jpg'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['filename'].unique()"
    ]
   },
   {
@@ -308,12 +345,29 @@
    ],
    "source": [
     "# 이미지별로 timestamp 지정\n",
-    "df.loc[df['filename'] == 'IMG_2547.jpg', 'timestamp'] = '2024-08-12 21:00:00'\n",
-    "df.loc[df['filename'] == 'IMG_2548.jpg', 'timestamp'] = '2024-08-12 21:30:00'\n",
-    "df.loc[df['filename'] == 'IMG_2549.jpg', 'timestamp'] = '2024-08-13 03:00:00'\n",
-    "df.loc[df['filename'] == 'IMG_2550.JPG', 'timestamp'] = '2024-08-13 12:00:00'\n",
-    "df.loc[df['filename'] == 'IMG_2551.JPG', 'timestamp'] = '2024-08-13 04:00:00'\n",
-    "df.loc[df['filename'] == 'IMG_2552.JPG', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'IMG_2824.JPG', 'timestamp'] = '2024-08-12 21:00:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755 복사본 2.jpg', 'timestamp'] = '2024-08-12 21:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755 복사본 3.jpg', 'timestamp'] = '2024-08-13 03:00:00'\n",
+    "df.loc[df['filename'] == '체육대회_박준희이재욱교수님_0812.jpg', 'timestamp'] = '2024-08-13 12:00:00'\n",
+    "df.loc[df['filename'] == '체육대회_유지훈_류근관교수님_0812_22.jpg', 'timestamp'] = '2024-08-13 04:00:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755 복사본.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'IMG_2836.JPG', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == '쳬육대회_ox퀴즈_0812_19.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'IMG_2844.JPG', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == '테니스_0813_06.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755_02.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755_02 복사본.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_Photo_2024-08-20-12-23-54 007.jpe', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_Photo_2024-08-20-12-23-54 004.jpe', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_Photo_2024-08-20-12-23-54 005.jpeg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_Photo_2024-08-20-12-23-54 001.jpeg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == '체육대회_유지훈정한직_0812_22.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == '체육대회_장은지김명환교수님_0812.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_Photo_2024-08-20-12-23-54 002.jpeg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == 'KakaoTalk_20240814_170634755_02 복사본 2.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "df.loc[df['filename'] == '체육대회끝나고__0812_22.jpg', 'timestamp'] = '2024-08-13 04:30:00'\n",
+    "\n",
     "\n",
     "# 시간 정보를 datetime 형식으로 변환\n",
     "df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
